# CardgamesQT

./: .gitignore  CMakeLists.txt  CardgamesQT.pro  README.md  card.cpp  card.h  player.cpp  player.h
